index.css
@charset "UTF-8";
:root {
  /* --W0: 1200px; */
  --W1: 984px;
  --W2: 748px;
  --W3: 496px;
  --GAP0: 60px;
  --GAP1: 40px;
  --GAP2: 30px;
  --BIG_GAP0: 120px;
  --BIG_GAP1: 80px;
  --BIG_GAP2: 40px;
  --SMALL_GAP0: 30px;
  --SMALL_GAP1: 20px;
  --SMALL_GAP2: 15px;
  --BLUE: #0060DC;
  --OffWhite: #FAFAF8;
  --GREY02: #EBEDF0;
  --GREY3: rgb(204, 204, 204);
  --GREY6: rgb(138, 141, 145);
  --GREY8: rgb(10, 10, 10);
}

:root {
  --mobileNavbarHeight: 60px;
  --regularNavbarHeight: 70px;
  --imgViewerHeight: 600px;
}

/* ==================  GRID SETUP destop ================== */

@media screen and (min-width: 1023px) {
  .edge-to-edge {
    grid-column-start: 1;
    grid-column-end: 13;
  }

  .true-first-half {
    width: 44%;
    padding: 52px 6% 80px 0;
    border-right: 1px solid var(--GREY02);
  }

  .true-second-half {
    width: 44%;
    padding: 52px 0 80px 6%;
  }

  .first-half{
    grid-column-start: 1;
    grid-column-end: 7;
  }
  .second-half {
    grid-column-start: 7;
    grid-column-end: 13;
  }

  .seven-first{
    grid-column-start: 1;
    grid-column-end: 8;
  }

  .nine-first {
    grid-column-start: 1;
    grid-column-end: 10;
  }

  .last-qtr, .side-bar {
    grid-column-start: 10;
    grid-column-end: 13;
  }

  .first-third {
    grid-column-start: 1;
    grid-column-end: 5;
  }
  .second-third{
    grid-column-start: 5;
    grid-column-end: 9;
  }
  .third-third{
    grid-column-start: 9;
    grid-column-end: 13;
  }
  .two-thirds {
    grid-column-start:5;
    grid-column-end: 13;
  }
}

/* ===== mobile ===== */

@media screen and (max-width: 768px) {
  .edge-to-edge, .first-half, .second-half, .seven-first, .nine-first, .last-qtr, .side-bar, .first-third, .second-third, .third-third, .two-thirds {
    grid-column-start:1;
    grid-column-end: 3;
  }

  .true-first-half, .true-second-half {
    width: 100%;
  }

  .true-first-half {
    margin-bottom: 60px;
  }


}

/* ==================  TYPOGRAPHY  ================== */
@font-face {
  font-family: "BasisGrotesqueOffWhite";
  src: url("common/fonts/basis-grotesque-off-white.woff");
}
@font-face {
  font-family: "BasisGrotesqueMedium";
  src: url("common/fonts/basis-grotesque-medium.woff");
}
@font-face {
  font-family: "BasisGrotesqueBold";
  src: url("common/fonts/basis_grotesque_bold.otf")
}
h1 {
  font-family: BasisGrotesqueBold;
  margin: 0 0 20px 0;
  font-weight: normal;
}

h2 {
  font-family: BasisGrotesqueBold;
  font-size: 36px;
  letter-spacing: -1px;
}
h3 {
  font-family: BasisGrotesqueBold;
  font-size: 24px;
  line-height: 32px;
  letter-spacing: -0.2px;
  margin: 0 0 20px 0;
  font-weight: normal;
}
h4, p {
  font-size: 20px;
  line-height: 28px;
  margin: 0 0 20px 0;
}
h5{

}
h6{
  font-size: 14px;
  letter-spacing: 0;
  line-height: 19px;
  margin: 16px 0 40px 0;
  font-weight: 400;
}

.bold {
  font-family: BasisGrotesqueBold;
}

.centeralign{
  text-align: center;
}

#about a {
  color: white;
  border-bottom: 1px solid white;
}

a, p.readmore {
  text-decoration: none;
  width: fit-content;
  margin-bottom: 0;
  color: var(--BLUE);
  border-bottom: 1px solid var(--BLUE);
}

.bullet-container{
  display: flex;
}

.bullet {
 width: 24px;
 height: 24px;
 border: 1px solid var(--GREY8);
 border-radius: 100%;
 margin-right: 24px;
 margin-top: 4px;
 flex: none;
}

.inner-bullet {
 width: 6px;
 height: 6px;
 border-radius: 100%;
 margin: 9px;
}

.bullet-container:nth-of-type(1) .inner-bullet{
  background-color: #588CFF;
}
.bullet-container:nth-of-type(2) .inner-bullet{
  background-color: #8A72EB;
}
.bullet-container:nth-of-type(3) .inner-bullet{
  background-color: #B79DEC;
}
.bullet-container:nth-of-type(4) .inner-bullet{
  background-color: #3DB9BE;
}

.bullet-container:nth-of-type(5) .inner-bullet{
  background-color: rgb(51, 165, 191);
}

#footer p, a.journal, .publication span, .publication .creds {
  font-size: 16px;
  line-height: 24px;
}

a.journal {
  border-bottom: none;
  color: var(--GREY8);
  display: block;
}

/* ===== mobile ===== */


@media screen and (min-width: 768px) {

  h1 {
    font-size: 64px;
    line-height: 74px;
    letter-spacing: -1.5px;
  }

  h2 {

  }
  h3{

  }
  p {

  }
  h5{}

  h6{}

}
@media screen and (max-width: 768px) {
  h1 {
    font-size: 40px;
    line-height: 46px;
    letter-spacing: -1px;
  }
  h2 {

  }
  h3{

  }
  p {

  }
  h5{}

  h6{}

  .centeralign{
    text-align: left;
  }

}

/* ======================================  LAYOUT SETUP  ====================================== */
body {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  color: var(--GREY8);
  font-family: BasisGrotesqueMedium, sans-serif;
  margin: 0;
}

@media screen and (min-width: 1340px) {
  body {
    --w: var(--W1);
  }
  body #window_stats:after {
    content: "--w: var(--W1): 1200px \a[BP1] screen: 1340px screen";
  }
}
@media screen and (min-width: 1023px) and (max-width: 1340px) {
  body {
    --w: var(--W1);
  }
  body #window_stats:after {
    content: "--w: var(--W1): 984px \a[BP2] screen [BP1]: 1023px screen 1340px";
  }
}
@media screen and (min-width: 760px) and (max-width: 1023px) {
  body {
    --w: var(--W2);
  }
  body #window_stats:after {
    content: "--w: var(--W2): 748px \a[BP3] screen [BP2]: 760px screen 1023px";
  }
}
@media screen and (min-width: 500px) and (max-width: 760px) {
  body {
    --w: var(--W3);
    margin: 0 20px 20px 20px;
  }
  body #window_stats:after {
    content: "--w: var(--W3): 496px \a[BP4] screen [BP3]: 500px screen 760px";
  }
}

@media screen and (min-width: 1340px) {
  body {
    --gap: var(--GAP0);
    --big_gap: var(--BIG_GAP0);
    --small_gap: var(--SMALL_GAP0);
  }
}
@media screen and (min-width: 1023px) and (max-width: 1340px) {
  body {
    --gap: var(--GAP1);
    --big_gap: var(--BIG_GAP1);
    --small_gap: var(--SMALL_GAP1);
  }
}

.main-cls {
  max-width: 100%;
  width: var(--w);
  display: grid;
  margin: 0 auto;
  margin-bottom: 100px;
}
/* ... */

